Fix img alignment by setting padding to 10px auto

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5;
   min-height: 100vh;
-  padding: 10px;
+  padding: 10px auto;
   text-align: center;
   max-width: 500px;
   margin: 10px auto;
